--- a/sources/VeloCity.Wpf.Presentation.Styles/CustomControls/PanelWithTitleStyles.xaml
+++ b/sources/VeloCity.Wpf.Presentation.Styles/CustomControls/PanelWithTitleStyles.xaml
@@ -66,7 +66,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                             Background="{TemplateBinding Background}"
                             Padding="{TemplateBinding ContentPadding}"
                             BorderThickness="1 5 1 1"
-                            BorderBrush="{StaticResource BorderBrush}">
+                            BorderBrush="{StaticResource BorderBrush}"
+                            CornerRadius="0 0 4 4">
 
                             <ContentPresenter />
 
